Adding endpoint to cancel payment
